Cleaned up a number of PMD errors
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/trunk/cdk@6416 eb4e18e3-b210-0410-a6ab-dec725e4b171